# EvoDiffMol

./: .gitignore  LICENSE  README.md  install_conda.sh  install_pip_only.sh  pyproject.toml  requirements.txt  setup.py  train.py  upload_to_huggingface.sh
assets/: README.md  download_checkpoint.py
assets/checkpoints/: README.md
assets/configs/: moses_production.yml
configs/: datasets_config.py  general_without_h.yml
datasets/: config_info.py  dataset_configs_output.txt
datasets/qm9/: bond_analyze.py
datasets/qm9/data/prepare/: download.py  process.py  qm9.py
datasets/qm9/property_prediction/: main_qm9_prop.py
datasets/scaffold_examples/scaffold_mol2/: scaffold_2.mol2
datasets/utils/: README.md  __init__.py  molecular_processing.py
evodiffmol/: PACKAGE_BUILD_SUMMARY.md  README.md  __init__.py  generator.py
evodiffmol/design/: API_REFERENCE.md  IMPLEMENTATION_GUIDE.md  TESTING_GUIDE.md
evodiffmol/ga/: __init__.py
evodiffmol/ga/core/: __init__.py  base.py  config_loader.py  trainer.py
evodiffmol/ga/population/: __init__.py  population_dataset.py
evodiffmol/models/encoder/: egnn.py  egnn_pytorch.py
evodiffmol/models/epsnet/: MDM.py  MDM_old.py
evodiffmol/scoring/: __init__.py  abstract_scoring.py  property_configs.py  scoring.py
evodiffmol/utils/: dataset_scaffold.py  dataset_scaffold_smiles.py  datasets.py  evaluation_utils.py  mol2_parser.py  molecule_generation.py  reconstruct.py  sample.py  scaffold_utils.py  training_utils.py  training_utils_old.py
evodiffmol/utils/mol2_writer/: __init__.py  mol2_writer.py
examples/: 01_single_property.py  02_multi_property.py  03_dataframe_output.py  04_scaffold_based.py  05_property_exploration.py  06_batch_processing.py  README.md  RUNTIME_INFO.md
ga_config/: general_debug.yml
tests/: README.md  conftest.py  quick_test.py  test_3d_structure.py  test_admet_opt.py  test_api_basic.py  test_formats.py  test_optimization.py  test_scaffold.py
