[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "evodiffmol"
version = "1.0.0"
description = "Molecular generation and optimization using genetic algorithms and diffusion models"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "EvoDiffMol Team"}
]
keywords = ["molecular-generation", "drug-discovery", "diffusion-models", "genetic-algorithms", "cheminformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=1.10.0",
    "torch-geometric>=2.0.0",
    "torch-scatter",
    "torch-sparse",
    "torch-cluster",
    "rdkit>=2022.9.1",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "pyyaml>=5.4.0",
    "easydict>=1.9",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "black>=21.9b0",
]

training = [
    "tensorboard>=2.8.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/your-org/EvoDiffMol"
Documentation = "https://github.com/your-org/EvoDiffMol/blob/main/README.md"
Repository = "https://github.com/your-org/EvoDiffMol"
Issues = "https://github.com/your-org/EvoDiffMol/issues"

[tool.setuptools.packages.find]
include = ["evodiffmol*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
evodiffmol = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

